implement pagination, sorted item, search item by category, register, login with token 19/8/2023