@@ -1,9 +1,13 @@
 package com.shop.service.impl;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import com.shop.converter.Converter;
@@ -12,6 +16,7 @@ import com.shop.entity.Category;
 import com.shop.entity.Item;
 import com.shop.repository.ItemRepository;
 import com.shop.service.ItemService;
+import com.shop.utils.PageableUtils;
 
 @Service
 public class ItemServiceImpl implements ItemService {
@@ -22,9 +27,19 @@ public class ItemServiceImpl implements ItemService {
 	Converter converter;
 
 	@Override
-	public List<ItemDTO> getAll() {
-		return itemRepository.findAll()
-				.stream().map(t -> converter.toItemDTO(t)).toList();
+	public List<ItemDTO> getAll(Integer pageNo, Integer pageSize, String sortBy) {
+		
+		Pageable pageable = PageableUtils.getPageable(pageNo, pageSize, sortBy);
+
+		Page<Item> pageResult = itemRepository.findAll(pageable);
+		if(pageResult.getContent() != null) {
+			return pageResult.getContent().stream().map(t -> converter.toItemDTO(t)).collect(Collectors.toList());
+		}
+		else {
+			return new ArrayList<ItemDTO>();
+		}
+//		return itemRepository.findAll()
+//				.stream().map(t -> converter.toItemDTO(t)).toList();
 	}
 
 	@Override
@@ -41,10 +56,11 @@ public class ItemServiceImpl implements ItemService {
 			return Optional.empty();
 		}
 	}
-
+	
 	@Override
-	public List<ItemDTO> findByCategory(Category category) {
-		List<Item> items = itemRepository.findByCategory(category);
+	public List<ItemDTO> findByCategory(Category category, Integer pageNo, Integer pageSize, String sortBy) {
+		Pageable pageable = PageableUtils.getPageable(pageNo, pageSize, sortBy); 		
+		List<Item> items = itemRepository.findByCategory(category, pageable);
 		return items.stream().map(t -> converter.toItemDTO(t)).toList();
 	}
 }
